@@ -27,6 +27,7 @@ OpenLDAP 2.4.41 Engineering
 	Fixed slapo-syncprov segfault on disconnect/abandon (ITS#5452,ITS#8012)
 	Fixed slapo-syncprov memory leak (ITS#8039)
 	Fixed slapo-syncprov segfault on disconnect/abandon (ITS#8043)
+	Fixed slapo-unique enforcement of uniqueness with manageDSAit control (ITS#8057)
 	Build Environment
 		Fixed libdb detection with gcc 5.x (ITS#8056)
 		Enhanced contrib modules build paths (ITS#7782)
